# TeeDSP

./: -ProbeSharedMapping  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE  README.md  TODO.md  audioeng_exports.txt
docs/: APO_INTENT.md  LLM_PLAN.md  SPLIT_PLAN.md
scripts/: install_apo.ps1  publish.ps1  uninstall_apo.ps1  validate_stack.ps1  verify_apo_contract.last.json  verify_apo_contract.ps1
scripts/baseline/: capture_baseline.ps1  realtek_clean_baseline.json  verify_baseline.ps1
src/apo/: ApoFactory.cpp  ApoGuids.h  ApoGuidsImpl.cpp  AudioBarsApo.cpp  AudioBarsApo.h  TeeDspApo.cpp  TeeDspApo.def
src/dsp/: ApoShared.h  ApoSharedClient.cpp  ApoSharedClient.h  Biquad.h  ChainParams.h  Compressor.cpp  Compressor.h  DspController.cpp  DspController.h  Exciter.cpp  Exciter.h  Leveler.cpp  Leveler.h  ParametricEQ.cpp  ParametricEQ.h  Processor.h  ProcessorChain.cpp  ProcessorChain.h  SpscRingBuffer.h
src/host/: AudioEngine.cpp  AudioEngine.h  Fft.cpp  Fft.h  Resampler.cpp  Resampler.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  WasapiDeviceNotifier.cpp  WasapiDeviceNotifier.h  WasapiDevices.cpp  WasapiDevices.h  WasapiLoopbackCapture.cpp  WasapiLoopbackCapture.h  WasapiRender.cpp  WasapiRender.h
src/ui/: MainWindow.cpp  MainWindow.h  StartupRegistration.cpp  StartupRegistration.h  SystemOutputController.cpp  SystemOutputController.h  Theme.cpp  Theme.h  TrayController.cpp  TrayController.h  app.rc  main.cpp  theme.qss
src/ui/widgets/: EqCurve.cpp  EqCurve.h  Knob.cpp  Knob.h  LevelMeter.cpp  LevelMeter.h  WidgetMetrics.h
